# mark-me-down

./: .gitignore  .semgrep.yaml  AGENTS.md  Dockerfile  README.md  app.py  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  skills-lock.json  skills.json  start_a2a.bat  test_a2a.py  test_a2a_card.py  test_local.py
.agent/: mark-me-down-dev.agent.md
.streamlit/: config.toml
agents/: note_refactor_agent.py  prompt_builder.py
agents/note_profiler/: __init__.py
agents/v2/: a2a_executor.py  a2a_server.py  guardrails.py  models.py  note_profiler_node.py  note_refactor_node.py  runner.py  workflow.py
dev/: debug_adk.py
dev/data/: inital-data.jsonl  new-set-templates-enriched2.jsonl  templates-enriched-data copy.jsonl  templates-enriched-data.jsonl  templates-inital-data.jsonl
dev/notebooks/: RAG-engine-drafts.ipynb  learner-and-parser-agents-drafts.ipynb  parsing-and-saving-templates.ipynb  update_nb.py
dev/scripts/: copy_wsl_skills.py  populate-db.py
docs/: architecture.md  developer-guide.md  project-prompt.md  storage.md  use_cases.md  vision.md
docs/project-implementation-artifacts-v1/: walkthrough.md
models/: request_models.py  response_models.py
scripts/: git_pre_commit.py  setup_pre_commit.py
services/: clipboard_service.py  filename_service.py  openai_service.py  rag_service.py
tests/: __init__.py  test_a2a_server.py  test_filename_service.py  test_guardrails.py  test_note_refactor_agent.py  test_openai_service.py  test_prompt_builder.py
ui/: home.py  widgets.py
utils/: markdown_utils.py
(+17 files in other folders)
