[project]
name = "mark-me-down"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-adk[a2a]>=2.3.0",
    "google-adk[extensions]>=2.3.0",
    "pydantic",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "sse-starlette>=3.4.5",
    "starlette>=1.3.1",
    "streamlit>=1.58.0",
    "supabase>=2.31.0",
    "uvicorn>=0.49.0",
]
